--- a/views/user/userRegister.ejs
+++ b/views/user/userRegister.ejs
@@ -14,6 +14,7 @@
             Looks good!
           </div>
         </div>
+        <input type="hidden" name="ref" value="<%= ref||'' %>">
         <div class="col-md-12">
           <label for="validationCustom02" class="form-label">Contact</label>
           <input type="number" class="form-control" id="validationCustom02" name="contact"  required>
