--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -1,5 +1,6 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/adminHome.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/card.css">
 
 </head>
 <body>
@@ -53,7 +54,7 @@
               <% products.forEach(product=>{%>
    
                 <div class="col">
-                  <div class="card h-100" style="border: 1px solid rgba(51, 51, 51, 0.567); border-radius: 20px; box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.608); ">
+                  <div class="card h-100">
                   <a href="/admin/productDetailed?id=<%=product._id%>" style="padding-right: 10px; margin: 0px;">
                     <img src="../../public/productImages/<%= product.images[0] %>" class="image-fluid" alt="..." style="border-radius: 20px; margin: 5px; max-width: 100%; height: auto; object-fit: contain;">
                    </a> 
