referral-button-designed

--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -343,7 +343,7 @@
       <div class="card-details">
         <p class="text-title"><i class="fa-solid fa-money-bills"></i> Total Revenue</p>
         <div class="mt-auto" style="display: flex; justify-content: center;">
-          <p class="text-body"><i class="fa-solid fa-indian-rupee-sign"></i> <%=totalSales%></p>
+          <p class="text-body"><i class="fa-solid fa-indian-rupee-sign"></i> <%=totalSales.toFixed(2)%></p>
         </div>
       </div>
     </div>
