--- a/views/admin/productDetailed.ejs
+++ b/views/admin/productDetailed.ejs
@@ -1,5 +1,6 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/card.css">
 <style>
     .card {
     position: relative;
@@ -84,7 +85,7 @@
             </div>
             
         </div>
-            <div class="col-10 mt-2 p-2 d-flex align-items-center" style="border: 1px solid rgb(75, 75, 75); border-radius: 20px; background-color: #dfcfe9; border-radius: 20px; box-shadow: 0px 0px 3px rgb(132, 0, 255);">
+            <div class="col-10 mt-2 p-2 d-flex align-items-center" style="border: 1px solid rgb(75, 75, 75); border-radius: 20px;  border-radius: 30px; ">
                 <div class="row g-2">
                     <% if (product?.images && product?.images.length === 1) { %>
                         <div class="col-12">
