--- a/views/user/addAddress.ejs
+++ b/views/user/addAddress.ejs
@@ -258,6 +258,8 @@
                         return;
                         }
                         if (!form.checkValidity()) {
+                            showAlert("Fill The Form Correctly")
+                            form.classList.add('was-validated');
                             return;
                         }
             
