--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -19,31 +19,24 @@ input::-webkit-inner-spin-button {
   overflow: hidden;
 }
 
-.addressForm {
-  max-width: 700px;
-  min-width: 400px;
-  margin: 0 auto;
-  padding: 30px;
-  border-radius: 20px;
-  border: 1px solid black;
-}
+
 
 fieldset {
   border: none;
-  padding: 20px;
   border-radius: 5px;
 }
 
 .addressLabel {
-  display: block;
-  margin-top: 10px;
-  margin-bottom: 0px;
+  display: block !important;
+  margin-top: 10px !important;
+  margin-bottom: 0px !important;
 }
 
 .inputAddress {
   width: 100%;
   padding: 10px;
-  border-radius: 5px;
-  border: none;
-  box-shadow: 0px 0px 5px #888888;
+  border-radius: 10px;
+  margin-top: -10px !important;
+  border: 0.5px solid #8c8c8cc5;
+  box-shadow: 0px 0px 6px #0000003f;
 }
