--- a/views/layout/footerHTML.ejs
+++ b/views/layout/footerHTML.ejs
@@ -1,4 +1,4 @@
-<script src="../../public/jsFiles/formVal.js"></script>
+<script src="../../public/jsFiles/alert.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="../../public/jsFiles/refresh.js"></script>
