chat-implementation/help-center

--- a/views/admin/allOrders.ejs
+++ b/views/admin/allOrders.ejs
@@ -19,7 +19,7 @@
                 <th scope="col" style="width: 150px;">Items</th>
                 <th scope="col">Amount</th>
                 <th scope="col">Order ID</th>
-                <th scope="col">User ID</th>
+                <th scope="col">Ordered On</th>
                 <th scope="col">Status</th>
               </tr>
             </thead>
@@ -46,7 +46,7 @@
                       
                     <td class="align-middle" style="text-align: center;">&#x20B9  <%= order.payment.amount %></td>
                     <td class="align-middle" style="text-align: center;"><%= order?.orderId %></td>
-                    <td class="align-middle" style="text-align: center;"><%= order?.userId %></td>
+                    <td class="align-middle" style="text-align: center;"><%= moment(order?.createdAt).fromNow() %></td>
                     <td class="align-middle" style="text-align: center;">
                       <a href="/admin/orderDetailed?id=<%= order._id %>">
                       <% if (order.status === 'Processing') { %>
