--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -91,6 +91,11 @@
                         <span class="w-100 ms-3 text-center">All Brands</span>
                     </a>
                 </div>
+                <div>
+                    <a type="button" href="/chatAdmin/" class="openButton btn py-2 btn-dark d-flex align-items-center" style="text-decoration: none;">
+                        <span class="w-100 ms-3 text-center">Chat</span>
+                    </a>
+                </div>
                 
                  
                   </div>
