--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -112,6 +112,36 @@
     </div>
 </div>
 
+
+
+
+
+
+
+<div class="container m-5" style="width: min-content !important;">
+      
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="alertKey">
     <% if(locals.message) { %>
       <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
